@@ -323,7 +323,14 @@ SEXP attribute_hidden do_format(SEXP call, SEXP op, SEXP args, SEXP env)
     checkArity(op, args);
     PrintDefaults(env);
 
-    if (!isVector(x = CAR(args)))
+    if (isEnvironment(x = CAR(args)))
+    {
+        PROTECT(y = allocVector(STRSXP, 1));
+        SET_STRING_ELT(y, 0, mkChar(EncodeEnvironment(x)));
+        UNPROTECT(1);
+        return y;
+    }
+    else if (!isVector(x))
         error(_("first argument must be atomic"));
     args = CDR(args);
 
